# libtpl

./: .gitignore  AUTHORS  Makefile  Makefile.in  NEWS  config.status  configure  configure.ac  libtool
FreeBSD-port/: Makefile  distinfo  pkg-descr
autom4te.cache/: traces.0t
config/: config.h
src/: Makefile  Makefile.in  libtpl.la  tpl.c  tpl.h  tpl.lo
src/.deps/: tpl.Plo
src/.libs/: libtpl.lai
